test/log/reduction/vrdotp_vv_i32.txt
vrdotp_vv_i32.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrdotp_vv_i32.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrdotp_vv_i32.c:30:6: warning: no previous prototype for 'vrdotp_vv_i32_golden' [-Wmissing-prototypes]
   30 | void vrdotp_vv_i32_golden(int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vrdotp_vv_i32.c: In function 'vrdotp_vv_i32_golden':
vrdotp_vv_i32.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrdotp_vv_i32.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrdotp_vv_i32.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrdotp_vv_i32.c: In function 'main':
vrdotp_vv_i32.c:37:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   37 |     int32x16_t a;
      |                ^
vrdotp_vv_i32.c:30:36: note: shadowed declaration is here
   30 | void vrdotp_vv_i32_golden(int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                           ~~~~~~~~~^
vrdotp_vv_i32.c:38:16: warning: declaration of 'b' shadows a parameter [-Wshadow]
   38 |     int32x16_t b;
      |                ^
vrdotp_vv_i32.c:30:47: note: shadowed declaration is here
   30 | void vrdotp_vv_i32_golden(int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                      ~~~~~~~~~^
vrdotp_vv_i32.c:39:16: warning: declaration of 'c' shadows a parameter [-Wshadow]
   39 |     int32x16_t c;
      |                ^
vrdotp_vv_i32.c:30:58: note: shadowed declaration is here
   30 | void vrdotp_vv_i32_golden(int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                 ~~~~~~~~~^
vrdotp_vv_i32.c:45:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   45 |     int32_t exp_result[16] = {0};
      |             ^~~~~~~~~~
vrdotp_vv_i32.c:30:69: note: shadowed declaration is here
   30 | void vrdotp_vv_i32_golden(int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                            ~~~~~~~~~^~~~~~~~~~
vrdotp_vv_i32.c:55:14: error: too many arguments to function 'vrdotp_vv_i32'
   55 |     result = vrdotp_vv_i32(a,b,c);
      |              ^~~~~~~~~~~~~
In file included from vrdotp_vv_i32.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1929:1: note: declared here
 1929 | __RUGRATS_DOTP_VV_OP (rdotp, i, int, int, 32, 32, 16)
      | ^~~~~~~~~~~~~~~~~~~~
vrdotp_vv_i32.c:60:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   60 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
vrdotp_vv_i32.c: In function 'vrdotp_vv_i32_golden':
vrdotp_vv_i32.c:75:1: error: expected declaration or statement at end of input
   75 | }
      | ^
vrdotp_vv_i32.c:30:36: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrdotp_vv_i32_golden(int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                           ~~~~~~~~~^
vrdotp_vv_i32.c:30:47: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vrdotp_vv_i32_golden(int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                      ~~~~~~~~~^
vrdotp_vv_i32.c:30:58: warning: unused parameter 'c' [-Wunused-parameter]
   30 | void vrdotp_vv_i32_golden(int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                 ~~~~~~~~~^
vrdotp_vv_i32.c:30:69: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrdotp_vv_i32_golden(int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                            ~~~~~~~~~^~~~~~~~~~
At top level:
vrdotp_vv_i32.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_i32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrdotp_vv_i32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrdotp_vv_i32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_i32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed